--- a/final/final.html
+++ b/final/final.html
@@ -24,7 +24,7 @@
             </div>
             <div class="liveTimer">
                 <div id="timer">3:00</div>
-                <button class="button2" id="b2" disabled="true" onclick="auth()">인증 완료</button>
+                <button class="button2" id="b2" disabled="true" onclick="auth2()">인증 완료</button>
             </div>
             <select class="select" id="address">
                 <option value="none" disabled selected>지역을 선택하세요</option>
